Fix horizontal scrolling bug.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,7 +5,6 @@
 // Base
 html {
 	overflow-y: scroll;
-	overflow-x: hidden;
   font-size: 16px;
   @media (min-width: $screen-sm-min) {
     font-size: 24px;
@@ -14,6 +13,9 @@ html {
     font-size: 28px;
   }
   font-weight: 400;
+}
+html, body {
+  overflow-x: hidden;
 }
 
 
